# Azure-Kinect-Sensor-SDK

./: OurChanges.md  azure-pipelines.yml
examples/green_screen/: CMakeLists.txt  Readme_Rajrup.txt  main.cpp
examples/transformation/: CMakeLists.txt  Readme_Rajrup.txt
src/transformation/: rgbz.c
